Gradle: add comments

--- a/webapp-frontend/build.gradle
+++ b/webapp-frontend/build.gradle
@@ -1,12 +1,15 @@
 apply from: rootProject.file('gradle/npm.gradle')
 
-task killAnyExistingWebpackProcesses(type: Exec) {
-    commandLine "pkill", "-f", "-9", "webpack"
+task killAnyExistingReactScriptsProcesses(type: Exec) {
+    commandLine "pkill", "-f", "-9", "react-scripts"
     ignoreExitValue true
 }
 
-task npmServeDev(type: NpmTask) { // can't be an NpmTask because we need to set the version string env var
-    dependsOn killAnyExistingWebpackProcesses
+// Starts the development server (calls the corresponding script in package.json)
+task npmServeDev(type: NpmTask) {
+    // First kill any webpack processes that were left over from the last
+    // time we ran (webpack doesn't handle Ctrl+C gracefully)
+    dependsOn killAnyExistingReactScriptsProcesses
     dependsOn npmInstall
     args = ['run', 'start']
 }
