Plugin, group, version and source compatibiltiy defined

--- a/backend-api/build.gradle
+++ b/backend-api/build.gradle
@@ -1,7 +1,14 @@
 plugins {
     id 'java'
     id 'java-library'
+    id 'org.springframework.boot' version '3.0.5'
+    id 'io.spring.dependency-management' version '1.1.0'
 }
+
+
+group = 'com.addaboy.api'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '17'
 
 repositories {
 
