--- a/backend-api/build.gradle
+++ b/backend-api/build.gradle
@@ -10,8 +10,25 @@ group = 'com.addaboy.api'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
-repositories {
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
 
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    runtimeOnly 'org.postgresql:postgresql'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 }
 
 test {
