Map Struct Dependencies into the project scope

--- a/backend-api/build.gradle
+++ b/backend-api/build.gradle
@@ -21,12 +21,19 @@ repositories {
 }
 
 dependencies {
+    // Postgresql Database Driver
     runtimeOnly 'org.postgresql:postgresql'
+
+    // Spring Boot web, security and Data Jpa Dependencies
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+    // Map Struct Dependencies
+    implementation 'org.mapstruct:mapstruct:1.5.3.Final'
+    implementation 'org.mapstruct:mapstruct-processor:1.5.3.Final'
 
+    // Lombok Dependencies
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 }
