--- a/webapp-frontend/package.json
+++ b/webapp-frontend/package.json
@@ -11,7 +11,8 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "bootstrap": "^5.2.3",
-    "classnames": "^2.3.2"
+    "classnames": "^2.3.2",
+    "axios": "^1.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
