Sprin Security in the class path

--- a/backend-api/build.gradle
+++ b/backend-api/build.gradle
@@ -26,7 +26,7 @@ dependencies {
 
     // Spring Boot web, security and Data Jpa Dependencies
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    //implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     //implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     // Map Struct Dependencies
