--- a/backend-api/build.gradle
+++ b/backend-api/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     //implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+    // JWT (Create and Verity JWT)
+    implementation 'com.auth0:java-jwt:4.3.0'
+
     // Map Struct Dependencies
     implementation 'org.mapstruct:mapstruct:1.5.3.Final'
     implementation 'org.mapstruct:mapstruct-processor:1.5.3.Final'
