--- a/backend-api/build.gradle
+++ b/backend-api/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     // Spring Boot web, security and Data Jpa Dependencies
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
-    //implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     // JWT (Create and Verity JWT)
     implementation 'com.auth0:java-jwt:4.3.0'
