--- a/backend-api/src/main/resources/application.yaml
+++ b/backend-api/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   datasource:
     platform: postgres
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/applicationdb
+    url: jdbc:postgresql://localhost:5432/backend
     username: backend
     password: backend
     initialization-mode: always     # Initialize the schema of the database
